@@ -176,18 +176,11 @@ public interface OpenMBeanParameterInfo
   boolean isValue(Object obj);
 
   /**
-   * <p>
    * Returns a textual representation of this instance.  This
    * is constructed using the class name
    * (<code>javax.management.openmbean.OpenMBeanParameterInfo</code>)
    * along with the name, open type, default, minimum, maximum
    * and legal values of the parameter.
-   * </p>
-   * <p>
-   * As instances of this class are immutable, the return value
-   * is computed just once for each instance and reused
-   * throughout its life.
-   * </p>
    *
    * @return a @link{java.lang.String} instance representing
    *         the instance in textual form.
